bk_ida/gccida/g1/regclass_init
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regclass_init/src/regclass.c:1394:1: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
reg_pref_0 = 0LL; 
^~~~~~~~~~
reg_pref
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regclass_init/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/regclass_init/src/obj/regclass.o] Error 1
